<resources>
    <string name="app_name">Digital Signage</string>
    <string name="str_app_dialog_info">Info</string>
    <string name="str_app_dialog_error">Error</string>
    <string name="str_app_dialog_no_data">There is no data.</string>
    <string name="str_image">There is no ad data</string>
    <string name="str_edit_ad_order">Edit ad order</string>
    <string name="str_edit_ad_order_info">Long press to change up/down position</string>
    <string name="str_edit_add_ad_info">Set the playback order\nin the Edit Order menu.</string>
    <string name="btn_dialog_ok">OK</string>
    <string name="btn_dialog_cancel">Cancel</string>
    <string name="btn_search">Search</string>
    <string name="str_image_path">Image path</string>
    <string name="str_image_path_input">Please enter the image path.</string>
    <string name="str_image_duration_input">Please enter the image duration.</string>
    <string name="str_image_play_time">Play time (s)</string>
    <string name="str_video_file_name">Video</string>
    <string name="str_image_file_name">Image</string>
    <string name="str_image_add">Add image</string>
    <string name="str_video_add">Add video</string>
    <string name="str_edit">Edit</string>
    <string name="str_name_input_hint">Enter a title.</string>
    <string name="str_remove">Do you want to delete?</string>
    <string name="str_image_add_complete">Image ad added complete.</string>
    <string name="str_video_add_complete">Video ad added complete.</string>
    <string name="str_image_add_edit">Edit image</string>
    <string name="str_video_add_edit">Edit video</string>
    <string name="str_image_add_edit_complete">Image edit complete</string>
    <string name="str_video_add_edit_complete">Video edit complete</string>
    <string name="str_no_data">Please add ads first.</string>
    <string name="str_order_save">Order change saved</string>
    <string name="str_home">Digital Signage</string>
    <string name="str_add_ad_title">Add ad</string>
    <string name="str_add_order_edit_title">Ad order</string>
    <string name="str_image_count">%s image ads</string>
    <string name="str_video_count">%s video ads</string>
    <string name="str_image_video_count">%s ads</string>
    <string name="str_screen_size">Ads image, video size</string>
    <string name="onboarding_slide1_title">Add ad</string>
    <string name="onboarding_slide1_subtitle">Please add the images and videos you want to advertise.</string>
    <string name="onboarding_slide1_desc">Image ads play for the set time, and video ads play for the video time.</string>
    <string name="onboarding_slide2_title">Change ad order</string>
    <string name="onboarding_slide2_subtitle">You can change the order of ads.</string>
    <string name="onboarding_slide2_desc">Change the order freely.</string>
    <string name="onboarding_slide3_title">Start Ad</string>
    <string name="onboarding_slide3_subtitle">Mirroring, connect to a TV or large monitor using a mirroring cable.</string>
    <string name="onboarding_slide3_desc">You can advertise on a larger screen without using expensive solutions or products.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>
    <string name="str_finish">Press the back button again to end.</string>
    <string name="str_image_crop">Image Ads\nFull Mode</string>
</resources>