<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="340dp"
    android:background="@drawable/bg_background">

    <TextView
        android:id="@+id/tv_title"
        style="@style/DialogTitleText"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginTop="14dp"
        android:textColor="@color/black"
        android:text="@string/str_app_dialog_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_body"
        style="@style/DialogBodyText"
        android:layout_width="350dp"
        android:layout_height="352dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_dialog_two_button_cancel"
            android:text="@string/btn_dialog_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/fs_2xlarge"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/tv_apply"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_dialog_two_button_ok"
            android:text="@string/btn_dialog_ok"
            android:textColor="@color/white"
            android:textSize="@dimen/fs_2xlarge"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/tv_one_button_apply"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/selector_btn_dialog_one_button"
            android:text="@string/btn_dialog_ok"
            android:textColor="@color/white"
            android:textSize="@dimen/fs_2xlarge"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>