<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:visibility="invisible"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_home"
            android:textSize="@dimen/dimens_main_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mainView"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintBottom_toTopOf="@+id/displayInfo"
        android:orientation="horizontal"
        android:weightSum="2.3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/addAd"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/str_add_ad_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center|left|top"/>

            <TextView
                android:layout_marginTop="30dp"
                android:id="@+id/fullScreen"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/str_image_crop"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center|left|top"/>

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/orderAd"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/str_add_order_edit_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center|left|top"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/addAdRight"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:src="@drawable/ic_arrow_right"
                android:text="@string/str_add_ad_title"
                android:textSize="25sp"
                android:gravity="center|right|top"/>
            <ImageView
                android:layout_marginTop="98dp"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:src="@drawable/ic_arrow_right"
                android:text="@string/str_add_ad_title"
                android:textSize="25sp"
                android:gravity="center|right|top"/>
            <ImageView
                android:id="@+id/orderAdRight"
                android:layout_marginTop="88dp"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:src="@drawable/ic_arrow_right"
                android:text="@string/str_add_ad_title"
                android:textSize="25sp"
                android:gravity="center|right|top"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/imageCount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/str_image_count"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center|left|top"/>

            <TextView
                android:id="@+id/videoCount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/str_video_count"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center|left|top"/>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_marginTop="32dp"
                android:id="@+id/fullModeOnOff"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center|left|top"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="65dp"
                android:layout_marginLeft="1dp"
                android:id="@+id/ryOrderView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/str_video_count"
                android:textSize="21sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:textColor="@color/black"
                android:gravity="center|left|top"/>

            <TextView
                android:layout_marginTop="68dp"
                android:id="@+id/orderCount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/str_image_video_count"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center|left|top"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_marginBottom="6dp"
        android:id="@+id/displayInfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rlAdView"
        android:lineSpacingExtra ="5dp"/>
    <RelativeLayout
        android:id="@+id/rlAdView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorAccent"
        >
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/boardStart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_play"
        app:backgroundTint="@color/colorMainColor"
        app:fabCustomSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rlAdView"
        tools:ignore="SpeakableTextPresentCheck">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/col_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <include
        android:id="@+id/loading"
        layout="@layout/view_loading"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
