<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <Button
            android:layout_centerVertical="true"
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/ic_back"/>
        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_add_ad_title"
            android:textSize="@dimen/dimens_main_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/col_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:weightSum="4"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/rlTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rlImage"
            android:layout_weight="1.7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_background_bold"
            android:padding="5dp"
            tools:listitem="@layout/item_ad_add_image"/>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/rlEmptyImage"
            android:layout_weight="1.7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_background_bold"
            android:padding="5dp"
            tools:listitem="@layout/item_ad_add_image">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_toLeftOf="@id/emptyText"
                android:background="@drawable/ic_document" />

            <TextView
                android:id="@+id/emptyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:text="@string/str_image"
                android:textSize="@dimen/dimens_main_body" />
        </LinearLayout>

        <Button
            android:id="@+id/addImage"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_background_dot"
            android:text="@string/str_image_add"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rlVideo"
            android:layout_weight="1.7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_background_bold"
            android:padding="5dp"
            tools:listitem="@layout/item_ad_add_video"/>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/rlEmptyVideo"
            android:layout_weight="1.7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_background_bold"
            android:padding="5dp"
            tools:listitem="@layout/item_ad_add_image">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_toLeftOf="@id/emptyText"
                android:background="@drawable/ic_document" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:text="@string/str_image"
                android:textSize="@dimen/dimens_main_body" />
        </LinearLayout>
        <Button
            android:id="@+id/addVideo"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/bg_background_dot"
            android:text="@string/str_video_add"
            android:textStyle="bold"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/str_edit_ad_order_info"
        android:textSize="@dimen/dimens_main_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvOrderEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:text="@string/str_edit_add_ad_info"
            android:textSize="@dimen/dimens_main_bottom" />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:visibility="gone"
        android:id="@+id/boardSave"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:fabCustomSize="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_save"

        app:backgroundTint="@color/colorMainColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <include
        android:id="@+id/loading"
        layout="@layout/view_loading"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
