<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="370dp"
    android:orientation="vertical">

    <LinearLayout
        android:gravity="center"
        android:id="@+id/rl_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tvOrderEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:gravity="center|left"
                android:paddingBottom="13dp"
                android:hint="@string/str_name_input_hint"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <RelativeLayout
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimens_edittext_height"
                android:layout_centerVertical="true"
                android:layout_marginTop="15dp"
                android:layout_weight="3.2"
                android:textSize="16sp" >

                <TextView
                    android:id="@+id/tvOrderEditText1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/bg_background"
                    android:gravity="center|left"
                    android:hint="@string/str_image_path"
                    android:paddingRight="30dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:textSize="@dimen/dimens_edittext_size"
                    android:scrollbars="vertical"/>
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/deletePath"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_delete"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_weight="0.8"
                android:background="@drawable/selector_btn"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/btn_search"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <RelativeLayout
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimens_edittext_height"
                android:layout_centerVertical="true"
                android:layout_marginTop="15dp"
                android:layout_weight="3.2"
                android:textSize="16sp" >
                <EditText
                    android:inputType="number"
                    android:maxLength="4"
                    android:id="@+id/tvOrderEditText2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_weight="3"
                    android:background="@drawable/bg_background"
                    android:gravity="center|left"
                    android:padding="10dp"
                    android:paddingBottom="3dp"
                    android:hint="@string/str_image_play_time"
                    android:textSize="@dimen/dimens_edittext_size"/>

                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/deleteDuration"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_delete"/>
            </RelativeLayout>

            <ImageView
                android:id="@+id/imgThumb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:layout_weight="0.8"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/btn_search"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
